--- a/index.unmin.html
+++ b/index.unmin.html
@@ -376,7 +376,7 @@
             <br>
             <div class="row">
                 <div class="col-md-4 text-center">
-                    <div class="image-text-item"> <i class="fa fa-black-tie fa-4x"></i>
+                    <div class="image-text-item"> <i class="fab fa-black-tie fa-4x"></i>
                         <br>
                         <h3>Personality 
                 <br> 
@@ -390,7 +390,8 @@
                 </div>
                 <div class="col-md-4 text-center">
                     <div class="image-text-item">
-                        <div class="image-text-item"> <i class="fa fa-soccer-ball-o fa-4x"></i>
+                        <div class="image-text-item"> 
+                            <i class="fas fa-futbol fa-4x"></i>
                             <h3>Leisure
                 <br> 
                 </h3>
@@ -401,11 +402,10 @@
                     </div>
                 </div>
                 <div class="col-md-4 text-center">
-                    <div class="image-text-item"> <i class="fa fa-globe fa-4x"></i>
+                    <div class="image-text-item"> <i class="fas fa-plane-departure fa-4x"></i>
                         <h3>Travel
                 <br> 
                 </h3>
-                        <!--                Currently linking 5 countries to google photos auto gen movie-->
                         <p class="lead"> I ♥ <a href="https://www.instagram.com/piyushing/" target="_blank">travelling</a>. I have been to 10 countries so far and aspire to visit all the countries in the world one day.</p>
                         <blockquote>“The world is a book, and those who do not travel read only one page.” – Saint Augustine</blockquote>
                     </div>
@@ -417,9 +417,9 @@
         <div class="img-src-resume blur-img-resume"></div>
         <div class="big-white-text">
             <h2> Download my resume here !</h2>
-            <br>
-            <br>
-            <br> <a href="./resume.pdf" target="_blank" class="resume-icon-background"><i class="resume-icon fa fa-download fa-inverse fa-5x"></i></a> </div>
+            <br />
+            <br />
+            <br> <a href="./resume.pdf" class="icon" target="_blank"><i class="fas fa-cloud-download-alt fa-5x "></i></a> </div>
     </section>
 
     <!-- CSS files -->
