updated projects in site, linked blog

--- a/index.unmin.html
+++ b/index.unmin.html
@@ -52,7 +52,11 @@
 <!--            <h1>Piyush</h1>-->
             <p class="lead">Hi, I am Piyush Khemka
                 <br> I am currently working as a Software Engineer
-                <br> at Facebook in the Voice Assistant Team</p>
+                <br> at Facebook in the Voice Assistant Team
+                <br>
+                <br> You can find some of my writing in my
+                <a href="https://piyushkhemka.me/blog/" style="color: #2b957a;"><b>blog</b></a>
+            </p>
             <br>
             <br>
             <br>
@@ -237,12 +241,15 @@
                 <div class="row">
                     <div class="col-md-6 col-md-offset-3 text-center">
                         <div class="image-text-item">
-                            <a href="http://powerbridgeny.com/awardees/40/" target="_blank"> <img class="rounded-image enlarge-on-hover" src="./img/projects/trains.jpg" /> </a>
-                            <h3>Trainspotting
+                            <a href="https://chrome.google.com/webstore/detail/productiwitty/dofeaaajilgeamjjoibiknilokooopke?hl=en" target="_blank"> <img class="rounded-image enlarge-on-hover" src="./img/projects/green.png" /> 
+                            <h3><b>Productiwitty</b>
                     <br> 
-                    <small>Computer Vision & Data Science</small>
-                    </h3>
-                        <p class="lead"> Worked with <a href="https://en.wikipedia.org/wiki/Steven_Skiena" target="_blank"> Professor Steven Skiena </a>and <a href="https://www.linkedin.com/in/timvercruysse" target="_blank"> Tim Vercruysse </a> to develop a data service that can automatically detect & monitor movmement of goods on freight trains & make intelligent predictions about their price in future. We intended to detect wheel drag conditions using computer vision and machine learning to attribute fuel cost to individual train car wheels which would enable freight lines to save fuel cost and reduce unanticipated down time. The project was awarded by <a href ="http://powerbridgeny.com/" target="_blank"> PowerBridgeNY.</a> under the Transportation category</p>
+                    <small>Chrome extension</small>
+                    </h3></a>
+                        <p class="lead"> Productiwitty is a Google Chrome extension that reminds you every 15 minutes to stay focussed & put away distractions.
+                        This extension is targeted for the crowd who open Reddit/Facebook/Youtube & other time wasting websites for just "2 minutes" but end up wasting hours on them.
+                        <br /><br />
+                        Simple nudges go a long way in helping us stay on track & close these distracting sites & get back to work. Turn this on when you are working on something important and turn it off easily with a click on the icon, when you are done with work</p>
                         </div>
                     </div>
                 </div>
@@ -250,23 +257,30 @@
                 <div class="row">
                     <div class="col-md-5 col-md-offset-1 text-center">
                         <div class="image-text-item">
-                            <a href="https://github.com/piyushkhemka/Recasting-Movies-using-IMDB-data" target="_blank"> <img class="rounded-image enlarge-on-hover" src="./img/projects/imdb.png" /> </a>
-                            <h3>Recasting Movies using Data Science
+                            <a href="https://www.reddit.com/user/GANDHI-BOT/" target="_blank"> <img class="rounded-image enlarge-on-hover" src="./img/projects/gandhi-bot.png" /> 
+                            <h3><b>Gandhi Bot</b>
                     <br> 
-                    <small>Data Science</small>
-                    </h3>
-                            <p class="lead"> The model calculates a similarity score for all actors & uses that to recast any movie with different actors across timelines. Given an input year & movie, the model recommends most similar actors fit for the role. <br/><br/>
-                            The model answers questions like - If the movie Godfather were to be made today, who would be most suitable to play Marlon Brando's role? </p>
+                    <small>Reddit Bot</small>
+                    </h3></a>
+                            <p class="lead"> For a long time, I have noticed that folks on Reddit always mis-spell the name of Mahatma 'Gandhi' as 'Ghandi'. This annoyed me so much that I decided to create a bot to help people learn how to spell Gandhi correctly. 
+                            <br /> <br />
+                            I made a detailed <a href="https://piyushkhemka.me/blog/Building-a-Reddit-bot-in-5-lines.html" target="_blank">post</a> on how I built this bot in 5 lines & hosted it for free online.
+                            </p>
                         </div>
                     </div>
                     <div class="col-md-5 text-center">
                         <div class="image-text-item">
-                            <a href="https://github.com/piyushkhemka/Kernel-module-to-manipulate-global-system-call-table" target="_blank"> <img class="rounded-image enlarge-on-hover img-responsive" src="./img/projects/kernel.jpg" /> </a>
-                            <h3>Kernel Module to manipulate Syscalls
+                            <a href="https://www.producthunt.com/posts/dinner-disco" target="_blank"> <img class="rounded-image enlarge-on-hover img-responsive" src="./img/projects/sandwich.png" /> 
+                            <h3><b>Dinner Disco</b>
                     <br> 
-                    <small>Kernel Programming</small>
-                    </h3>
-                            <p class="lead">A loadable module in Linux Kernel that can override default behavior of system call vectors per process. Also,  a corresponding user side program to let users change syscall vectors by a running process via an ioctl.</p>
+                    <small>ios, Android</small>
+                    </h3></a>
+                            <p class="lead">I made this app during the great lockdown of 2020. Deciding what to eat is hard & mentally draining, specially during pandemic when you are stuck at home. So, I made an app that picks something to eat randomly. Add meals that you like. Remove the ones that you don't & then let the app do its magic & pick your next meal.
+                            <br /> <br /> Download Links: 
+                            <a href="https://apps.apple.com/us/app/dinner-disco/id1535010605" target="_blank"> iOS </a>
+                            ,
+                            <a href="https://play.google.com/store/apps/details?id=com.khems.dinner_disco" target="_blank"> Android </a>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -276,23 +290,22 @@
                 <div class="row">
                     <div class="col-md-5 col-md-offset-1 text-center">
                         <div class="image-text-item">
-                            <a href="https://github.com/piyushkhemka/Applying-Data-Science-techniques-on-Countries-data/blob/master/countries-datascience.ipynb" target="_blank"> <img class="rounded-image enlarge-on-hover" src="./img/projects/social.png" /> </a>
-                            <h3>Ranking Countries on Social Welfare
+                            <a href="https://piyushkhemka.me/blog/how-to-transfer-all-your-subreddits.html" target="_blank"> <img class="rounded-image enlarge-on-hover" src="./img/projects/subreddit-migrator.png" /> 
+                            <h3><b>Subreddit Migrator</b>
                     <br /> 
-                    <small>Data Science</small>
-                    </h3>
-                            <p class="lead"> Designed & developed a social welfare index for countries and ranked them using this index. Countries data was obtained from CIA World fact book.</p>
+                    <small>Reddit tool</small>
+                    </h3></a>
+                            <p class="lead"> I created a tool to help you transfer all your subreddits from one reddit account to the next. Reddit doesn't make it easy for you to migrate your subreddits, so I built a workaround. Now enjoy subscribing to all your favorite subreddits even on your throwaway accounts</p>
                         </div>
                     </div>
                     <div class="col-md-5 text-center">
                         <div class="image-text-item">
-                            <a href="https://github.com/piyushkhemka/Music-Recommendation-System/blob/master/Report.pdf" target="_blank"> <img class="rounded-image enlarge-on-hover img-responsive" src="./img/projects/music_reco.png" /> </a>
-                            <h3>Music Recommendation System
+                            <a href="https://github.com/piyushkhemka/Pdf-to-Word-Cloud" target="_blank"> <img class="rounded-image enlarge-on-hover img-responsive" src="./img/projects/pdftoword.jpeg" /> 
+                            <h3><b>Pdf to Word Cloud </b> 
                     <br> 
-                    <small>Recommendation Generator</small>
-                    </h3>
-                            <p class="lead"> A Collaborative Filtering & Content Based Recommendation system to generate music recommendations to users. Used
-                                <a href = "http://labrosa.ee.columbia.edu/millionsong/" target="_blank">Million Song Dataset</a> for model training & testing</p>
+                    <small>Application</small>
+                    </h3></a>
+                            <p class="lead"> An application hosted on github which generates a word cloud from a given pdf file.</p>
                         </div>
                     </div>
                 </div>
@@ -303,36 +316,34 @@
                 <div class="row">
                     <div class="col-md-4 text-center">
                         <div class="image-text-item">
-                            <a href="https://play.google.com/store/apps/details?id=com.toss.piyushkhemka.cointoss" target="_blank"> <img class="rounded-image enlarge-on-hover" src="./img/projects/cointoss.png" /> </a>
-                            <h3>Coin Toss 
+                            <a href="http://powerbridgeny.com/awardees/40/" target="_blank"> <img class="rounded-image enlarge-on-hover" src="./img/projects/trains.jpg" /> </a>
+                            <h3><b>Trainspotting</b>
+                    <br> 
+                    <small>Computer Vision & Data Science</small>
+                    </h3>
+                        <p class="lead"> Developed a service that could automatically detect & monitor movement of commodities on freight trains & make intelligent predictions about their price fluctuations. We also intended to detect wheel drag conditions using computer vision to attribute fuel cost to individual train car wheels which would enable freight lines to save fuel cost and reduce unanticipated down time. Worked with <a href="https://en.wikipedia.org/wiki/Steven_Skiena" target="_blank"> Professor Steven Skiena </a>and <a href="https://www.linkedin.com/in/timvercruysse" target="_blank"> Tim Vercruysse </a> & was awarded by <a href ="http://powerbridgeny.com/" target="_blank"> PowerBridgeNY.</a> under the Transportation category</p>
+                        </div>
+                        
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <div class="image-text-item">
+                            <a href="https://play.google.com/store/apps/details?id=com.toss.piyushkhemka.cointoss" target="_blank"> <img class="rounded-image enlarge-on-hover" src="./img/projects/cointoss.png" /> 
+                            <h3><b>Coin Toss </b>
                     <br /> 
                     <small>Android App</small>
-                    </h3>
+                    </h3></a>
                             <p class="lead"> The <strong>Android App</strong> lets you toss coins. The USP of this app is that you can toss unlimited number of times in the same window with a 1 Re Indian coin.</p>
                         </div>
                     </div>
                     <div class="col-md-4 text-center">
                         <div class="image-text-item">
-                            <a href="https://github.com/piyushkhemka/Pdf-to-Word-Cloud" target="_blank"> <img class="rounded-image enlarge-on-hover img-responsive" src="./img/projects/pdftoword.jpeg" /> </a>
-                            <h3>Pdf to Word Cloud
+                            <a href="https://github.com/piyushkhemka/Recasting-Movies-using-IMDB-data" target="_blank"> <img class="rounded-image enlarge-on-hover" src="./img/projects/imdb.png" /> 
+                            <h3> <b>Recasting Movies using Data Science</b>
                     <br> 
-                    <small>Application</small>
-                    </h3>
-                            <p class="lead"> An application hosted on github which generates a word cloud from a given pdf file.</p>
-                        </div>
-                    </div>
-                    <div class="col-md-4 text-center">
-                        <div class="image-text-item">
-<!--                            <a href="" target="_blank"> -->
-                                <img class="rounded-image enlarge-on-hover" src="./img/projects/sixdegrees.png" />
-<!--                            </a>-->
-                            <h3>Six Degrees
-                    <br> 
-                    <small>Social Networking Site</small>
-                    </h3>
-                            <p class="lead">Built a social networking website for final year Undergraduate project. It employed Machine Learning models to combat spam from people's wallposts.
-<!--                                <em>Not live anymore unfortunately.</em>-->
-                            </p>
+                    <small>Data Science</small>
+                    </h3></a>
+                            <p class="lead"> The model calculates a similarity score for all actors & uses that to recast any movie with different actors across timelines. Given an input year & movie, the model recommends most similar actors fit for the role. <br/><br/>
+                            The model answers questions like - If the movie Godfather were to be made today, who would be most suitable to play Marlon Brando's role? </p>
                         </div>
                     </div>
                 </div>
@@ -395,9 +406,9 @@
                             <h3>Leisure
                 <br> 
                 </h3>
-                            <p class="lead"> In my leisure time, I like to read <a href="https://www.goodreads.com/user/show/8380475-piyush" target="_blank">books</a> (mostly fiction) and watch <a href="http://www.imdb.com/user/ur14409147/ratings?ref_=nv_usr_rt_4" target="_blank">movies</a>.
+                            <p class="lead"> In my leisure time, I like to read <a href="https://www.goodreads.com/user/show/8380475-piyush" target="_blank">books</a>, watch <a href="http://www.imdb.com/user/ur14409147/ratings?ref_=nv_usr_rt_4" target="_blank">movies</a> & learn how to play piano.
                                 <br>
-                                <br> I am also into quizzing, lifting weights and playing table tennis. </p>
+                                <br> I am also into lifting weights, quizzing, practising Krav Maga and playing strategy board games. </p>
                         </div>
                     </div>
                 </div>
@@ -426,7 +437,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Font awesome css file-->
     <link href="css/all.min.css" rel="stylesheet">
-    <link href="css/mystyles.css" rel="stylesheet">
+    <link href="css/mystyles.unmin.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
